css changes to fix broken styles

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -25,8 +25,25 @@ img {
   font-weight: bold;
 }
 
-h1,
-h2 ,
+h1{
+  display: block;
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+
+},
+h2{
+  display: block;
+  font-size: 1.5em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+},
 h3 {
   font-size: 2em;
   font-weight: normal;
@@ -75,3 +92,13 @@ a {
 .list-inline li {
   display: inline-block;
 }
+
+.btn {
+  border: none; /* Remove borders */
+  color: white; /* Add a text color */
+  padding: 14px 28px; /* Add some padding */
+  cursor: pointer; /* Add a pointer cursor on mouse-over */
+}
+
+.success {background-color: #4CAF50;} /* Green */
+.success:hover {background-color: #46a049;}
